--- a/fences_metal.html
+++ b/fences_metal.html
@@ -104,28 +104,16 @@
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
-
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-											consequat etiam lorem ipsum dolor sit amet nullam.</p>
-
-											<h3>And Yet Another Subheading</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
+											<h3>Metal Chain-Link Fence</h3>
+											<p>Chain-link fencing is probably the most economical and durable style of fencing.  It is made from galvanized steel or colored vinyl coated, is resistant to rust and is virtually maintenance free.<br><br>It is available in 4′-5′-6′-8′ heights, commercial or residential strength and in bare galvanized or vinyl coated green or black.  </p>
+											
+											<h3>Metal Aluminum Fence</h3>
+											<p>Aluminum fencing offers a combination of durability, strength and a clean appearance. This fence is the perfect choice to complement any architectural or landscape design. Matching gates are available and all gates can be self-closing and self-latching.<br><br>
+											Aluminum ornamental fences are ideal around pools and corrosive areas where steel and wooden fences would require maintenance. <br><br>
+											There are literally hundreds of sizes, designs, strengths and colors to choose from. 4′ tall black is available in stock all of 
+											the time, all others usually take around 2-3 weeks for us to get. FBA recommends the Jerith brand. 
+											</p>
+	
 										</article>
 
 								</div>
