Slight Navi changes and unnecessary changes to left-sidebar
Link to the decks page have been nulified for these files. When deck
clicked, no page will load. The fences tabs however, allow for
transitions to the other fences tabs from a fences tabs. (i.e if im in
fences_vinyl and click on wood, I will go to wood)

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
 										<!--<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Decks</a>
+								<li><a href="#">Decks</a>
 									<ul>
 										<li><a href="decks_wood.html">Wood</a></li>
 										<li><a href="decks_composite.html">Composite</a></li>
