--- a/decks_wood.html
+++ b/decks_wood.html
@@ -24,32 +24,30 @@
 						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
 
 					<!-- Nav -->
-						<nav id="nav">
+												<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Fences</a>
 									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="fences_wood.html">Wood</a></li>
+										<li><a href="fences_metal.html">Metal</a></li>
+										<li><a href="fences_vinyl.html">Vinyl</a></li>
+										<!--<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li class="current"><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="#">Decks</a>
+									<ul>
+										<li><a href="decks_wood.html">Wood</a></li>
+										<li><a href="decks_composite.html">Composite</a></li>
+									</ul>
+								</li>
+								<li><a href="gates.html">Gates</a></li>
+								<li><a href="a&p.html">Arbors & Pergolas </a></li>
+								<li><a href="other_services.html">Other Services</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="faq.html">FAQ</a></li>
+								<li><a href="aboutus.html">About Us</a></li>
 							</ul>
 						</nav>
 
