--- a/faq.html
+++ b/faq.html
@@ -36,7 +36,7 @@
 										<!--<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Decks</a>
+								<li><a href="#">Decks</a>
 									<ul>
 										<li><a href="decks_wood.html">Wood</a></li>
 										<li><a href="decks_composite.html">Composite</a></li>
