--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
 								<li>
 									<a href="#">Fences</a>
 									<ul>
-										<li><a href="#">Wood</a></li>
-										<li><a href="#">Metal</a></li>
-										<li><a href="#">Vinyl</a></li>
+										<li><a href="fences_wood.html">Wood</a></li>
+										<li><a href="fences_metal.html">Metal</a></li>
+										<li><a href="fences_vinyl.html">Vinyl</a></li>
 										<!--<li><a href="#">Veroeros feugiat</a></li>-->
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Decks</a>
+								<li><a href="#">Decks</a>
 									<ul>
-										<li><a href="#">Wood</a></li>
-										<li><a href="#">Composite</a></li>
+										<li><a href="decks_wood.html">Wood</a></li>
+										<li><a href="decks_composite.html">Composite</a></li>
 									</ul>
 								</li>
 								<li><a href="gates.html">Gates</a></li>
