Fences, index, and A&P
updates to 3 listed pages

--- a/fences_metal.html
+++ b/fences_metal.html
@@ -41,15 +41,15 @@
 								</li>
 								<li><a href="#">Decks</a>
 									<ul>
-										<li><a href="#">Wood</a></li>
-										<li><a href="#">Composite</a></li>
+										<li><a href="decks_wood.html">Wood</a></li>
+										<li><a href="decks_composite.html">Composite</a></li>
 									</ul>
 								</li>
 								<li><a href="gates.html">Gates</a></li>
 								<li><a href="a&p.html">Arbors & Pergolas </a></li>
 								<li><a href="other_services.html">Other Services</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
-								<li><a href="faq.html">FAQ</a></li>
+								<li ><a href="faq.html">FAQ</a></li>
 								<li><a href="aboutus.html">About Us</a></li>
 							</ul>
 						</nav>
