--- a/fences_wood.html
+++ b/fences_wood.html
@@ -31,7 +31,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li class="current">
-									<a href="#">Fences</a>
+									<a href="#"><a>Fences</a></a>
 									<ul>
 										<li><a href="fences_wood.html">Wood</a></li>
 										<li><a href="fences_metal.html">Metal</a></li>
@@ -41,15 +41,15 @@
 								</li>
 								<li><a href="#">Decks</a>
 									<ul>
-										<li><a href="#">Wood</a></li>
-										<li><a href="#">Composite</a></li>
+										<li><a href="decks_wood.html">Wood</a></li>
+										<li><a href="decks_composite.html">Composite</a></li>
 									</ul>
 								</li>
 								<li><a href="gates.html">Gates</a></li>
 								<li><a href="a&p.html">Arbors & Pergolas </a></li>
 								<li><a href="other_services.html">Other Services</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
-								<li><a href="faq.html">FAQ</a></li>
+								<li ><a href="faq.html">FAQ</a></li>
 								<li><a href="aboutus.html">About Us</a></li>
 							</ul>
 						</nav>
