--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Fences</a>
+									<a class="current">Fences</a></a>
 									<ul>
 										<li><a href="fences_wood.html">Wood</a></li>
 										<li><a href="fences_metal.html">Metal</a></li>
@@ -49,7 +49,7 @@
 								<li><a href="a&p.html">Arbors & Pergolas </a></li>
 								<li><a href="other_services.html">Other Services</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
-								<li><a href="faq.html">FAQ</a></li>
+								<li ><a href="faq.html">FAQ</a></li>
 								<li><a href="aboutus.html">About Us</a></li>
 							</ul>
 						</nav>
