Fixed Decks-Composite and such

--- a/decks_composite.html
+++ b/decks_composite.html
@@ -65,7 +65,7 @@
 
 										<article>
 											<header>
-												<h2>Decks - Composite Material</h2>
+												<h2>Composite Material</h2>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
