--- a/decks_wood.html
+++ b/decks_wood.html
@@ -64,7 +64,7 @@
 
 										<article>
 											<header>
-												<h2>Decks - Wood</h2>
+												<h2>Wood</h2>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
